--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
