added support for translation

--- a/demo/curation/nav.yaml
+++ b/demo/curation/nav.yaml
@@ -3,4 +3,6 @@ sections:
     title: Nineteenth Century Poetry
   - id: my_work
     title: My Poems
+  - id: translations
+    title: Translations
 
