--- a/package.json
+++ b/package.json
@@ -1,22 +1,47 @@
 {
   "name": "poetry-reader",
   "private": true,
-  "scripts": {
+
+  "main": "lib/poetry-reader.umd.js",
+  "module": "lib/poetry-reader.mjs",
+  "types": "lib/index.d.ts",
+
+  "exports": {
+    ".": {
+      "import": "./lib/poetry-reader.mjs",
+      "require": "./lib/poetry-reader.umd.js",
+      "types": "./lib/index.d.ts"
+    },
+    "./style.css": "./lib/poetry-reader.css"
+  },
+
+  "files": ["lib"],
+
+ "scripts": {
     "clean:content": "npx ts-node --project tsconfig.build.json content-build/scripts/clean-generated.cts",
     "build:content": "npm run clean:content && npx ts-node --project tsconfig.build.json content-build/scripts/build-reading-model.cts",
+
     "dev": "npm run build:content && cd site && npm run dev",
     "build": "npm run build:content && cd site && npm run build",
     "build:site": "npm run build:content && cd site && npm run build",
-    "build:lib": "vite build --config vite.lib.config.ts"
+
+    "build:lib:js": "vite build --config vite.lib.config.ts",
+    "build:lib:types": "tsc --project tsconfig.lib.json",
+
+    "build:lib": "npm run build:lib:js && npm run build:lib:types"
   },
+
   "dependencies": {
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.1"
   },
+
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.0.9",
+    "@vitejs/plugin-react": "^5.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
