--- a/site/package.json
+++ b/site/package.json
@@ -5,8 +5,10 @@
     "dev": "vite",
     "build": "vite build"
   },
-  "dependencies": {
+ "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "react-markdown": "^10.1.0" 
   }
 }
