Remove generated lib artifacts from repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Private content (never committed)
 /poems/
 /curation/
+/lib
 
-#Genrated Content
+#Generated Content
 site/src/generated/
 
 #Usual
