--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "lib/index.d.ts",
   "exports": {
     ".": {
+      "default": "./lib/poetry-reader.mjs",
       "import": "./lib/poetry-reader.mjs",
       "require": "./lib/poetry-reader.umd.js",
       "types": "./lib/index.d.ts"
