--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "name": "poetry-reader",
   "private": true,
-  "main": "lib/poetry-reader.umd.js",
-  "module": "lib/poetry-reader.mjs",
-  "types": "lib/index.d.ts",
-  "exports": {
-    ".": {
-      "default": "./lib/poetry-reader.mjs",
-      "import": "./lib/poetry-reader.mjs",
-      "require": "./lib/poetry-reader.umd.js",
-      "types": "./lib/index.d.ts"
-    },
-    "./style.css": "./lib/poetry-reader.css"
-  },
+  "type": "module",
+  "main": "./lib/poetry-reader.umd.cjs",
+  "module": "./lib/poetry-reader.js",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib"
   ],
+  
   "scripts": {
     "clean:content": "npx ts-node --project tsconfig.build.json content-build/scripts/clean-generated.cts",
     "build:content": "npm run clean:content && npx ts-node --project tsconfig.build.json content-build/scripts/build-reading-model.cts",
