--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "poetry-reader",
-  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "main": "./lib/poetry-reader.umd.cjs",
   "module": "./lib/poetry-reader.js",
   "types": "./lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "import": "./lib/poetry-reader.js",
+      "require": "./lib/poetry-reader.umd.cjs"
+    },
+    "./css": "./lib/poetry-reader.css"
+  },
   "files": [
     "lib"
   ],
-  
   "scripts": {
-   "clean:content": "node --loader ts-node/esm --input-type=module content-build/scripts/clean-generated.cts",
-    "build:content": "npm run clean:content && node --loader ts-node/esm --input-type=module content-build/scripts/build-reading-model.cts",
-    "dev": "npm run build:content && cd site && npm run dev",
-    "build": "npm run build:content && cd site && npm run build",
-    "build:site": "npm run build:content && cd site && npm run build",
+    "clean:content": "tsx content-build/scripts/clean-generated.ts",
+    "build:content": "npm run clean:content && tsx content-build/scripts/build-reading-model.ts",
+    "dev": "npm run build:lib && npm run build:content && cd site && npm run dev",
+    "build": "npm run build:lib && npm run build:content && cd site && npm run build",
+    "build:site": "npm run build:lib && npm run build:content && cd site && npm run build",
     "build:lib:js": "vite build --config vite.lib.config.ts",
     "build:lib:types": "tsc --project tsconfig.lib.json",
     "build:lib": "npm run build:lib:js && npm run build:lib:types"
@@ -28,7 +35,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.0.9",
     "@vitejs/plugin-react": "^5.1.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
   }
