--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "content-build/**/*.cts",
+    "content-build/**/*.ts",
     "models/**/*.ts"
   ]
 }
