small ui improvements. Refactored Explore into component for lib.

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -17,6 +17,7 @@
   "include": [
     "site/src/index.ts",
     "site/src/reader/**/*",
+    "site/src/explore/**/*",
     "site/src/models/**/*"
 ]
 }
